--- a/ComServer/ComServer.vcxproj.filters
+++ b/ComServer/ComServer.vcxproj.filters
@@ -38,4 +38,9 @@
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="ComServer.X.manifest">
+      <Filter>Resource Files</Filter>
+    </Manifest>
+  </ItemGroup>
 </Project>
