Add RegFree NetClient

--- a/NetServer/NetServer.csproj
+++ b/NetServer/NetServer.csproj
@@ -43,5 +43,8 @@
     <Compile Include="NetServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NetServer.manifest" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
