--- a/mscoree/mscoree.vcxproj
+++ b/mscoree/mscoree.vcxproj
@@ -20,33 +20,33 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{0C44BFE0-DB17-455A-BD8A-76249F941A40}</ProjectGuid>
+    <ProjectGuid>{C7DA60B9-E2E8-436E-95C0-69C0FD9B9A01}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ComClientRegFree</RootNamespace>
+    <RootNamespace>mscoree</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -72,19 +72,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <CustomBuildAfterTargets>Build</CustomBuildAfterTargets>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <CustomBuildAfterTargets>Build</CustomBuildAfterTargets>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <CustomBuildAfterTargets>Build</CustomBuildAfterTargets>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <CustomBuildAfterTargets>Build</CustomBuildAfterTargets>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -92,23 +88,14 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <PreprocessorDefinitions>_DEBUG;MSCOREE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Exports.def</ModuleDefinitionFile>
     </Link>
-    <Manifest>
-      <AdditionalManifestFiles>App.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
-    </Manifest>
-    <CustomBuildStep>
-      <Command>copy /y "$(SolutionDir)\NetServer\NetServer.manifest" "$(TargetDir)"
-copy /y "$(SolutionDir)\NetServer\bin\$(ConfigurationName)\NetServer.dll" "$(TargetDir)"
-copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(TargetDir)"</Command>
-      <TreatOutputAsContent>true</TreatOutputAsContent>
-      <Outputs>$(TargetDir)NetServer.manifest;$(TargetDir)NetServer.dll;%(Outputs)</Outputs>
-    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,23 +103,14 @@ copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(T
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;MSCOREE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Exports.def</ModuleDefinitionFile>
     </Link>
-    <Manifest>
-      <AdditionalManifestFiles>App.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
-    </Manifest>
-    <CustomBuildStep>
-      <Command>copy /y "$(SolutionDir)\NetServer\NetServer.manifest" "$(TargetDir)"
-copy /y "$(SolutionDir)\NetServer\bin\$(ConfigurationName)\NetServer.dll" "$(TargetDir)"
-copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(TargetDir)"</Command>
-      <TreatOutputAsContent>true</TreatOutputAsContent>
-      <Outputs>$(TargetDir)NetServer.manifest;$(TargetDir)NetServer.dll;%(Outputs)</Outputs>
-    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -142,25 +120,16 @@ copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(T
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;MSCOREE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Exports.def</ModuleDefinitionFile>
     </Link>
-    <Manifest>
-      <AdditionalManifestFiles>App.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
-    </Manifest>
-    <CustomBuildStep>
-      <Command>copy /y "$(SolutionDir)\NetServer\NetServer.manifest" "$(TargetDir)"
-copy /y "$(SolutionDir)\NetServer\bin\$(ConfigurationName)\NetServer.dll" "$(TargetDir)"
-copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(TargetDir)"</Command>
-      <TreatOutputAsContent>true</TreatOutputAsContent>
-      <Outputs>$(TargetDir)NetServer.manifest;$(TargetDir)NetServer.dll;%(Outputs)</Outputs>
-    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -170,32 +139,22 @@ copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(T
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <PreprocessorDefinitions>NDEBUG;MSCOREE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Exports.def</ModuleDefinitionFile>
     </Link>
-    <Manifest>
-      <AdditionalManifestFiles>App.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
-    </Manifest>
-    <CustomBuildStep>
-      <Command>copy /y "$(SolutionDir)\NetServer\NetServer.manifest" "$(TargetDir)"
-copy /y "$(SolutionDir)\NetServer\bin\$(ConfigurationName)\NetServer.dll" "$(TargetDir)"
-copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(TargetDir)"</Command>
-      <TreatOutputAsContent>true</TreatOutputAsContent>
-      <Outputs>$(TargetDir)NetServer.manifest;$(TargetDir)NetServer.dll;%(Outputs)</Outputs>
-    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ComClient\ComClient.cpp" />
+    <ClCompile Include="mscoree.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -204,7 +163,7 @@ copy /y "$(SolutionDir)\LoaderShim\bin\$(ConfigurationName)\LoaderShim.dll" "$(T
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Manifest Include="App.manifest" />
+    <None Include="Exports.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
