Move IServer interface definition to a IDL file
Done to reduce duplication in the C++ projects. The IDL file can also be compiled into a type library in a future commit, so that duplication can also be removed from the C# projects.

--- a/ComServer/ComServer.vcxproj.filters
+++ b/ComServer/ComServer.vcxproj.filters
@@ -43,4 +43,9 @@
       <Filter>Resource Files</Filter>
     </Manifest>
   </ItemGroup>
+  <ItemGroup>
+    <Midl Include="IServer.idl">
+      <Filter>Source Files</Filter>
+    </Midl>
+  </ItemGroup>
 </Project>
