--- a/OutOfProcDemo/OutOfProcDemo.csproj
+++ b/OutOfProcDemo/OutOfProcDemo.csproj
@@ -36,6 +36,10 @@
     <ApplicationManifest>App.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IServerLib">
+      <HintPath>..\Debug\IServerLib.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
