--- a/NetClient_RegFree/NetClient_RegFree.csproj
+++ b/NetClient_RegFree/NetClient_RegFree.csproj
@@ -39,6 +39,10 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IServerLib">
+      <HintPath>..\Debug\IServerLib.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
