Explicitly build .Net projects in 32bit
Necessary to make them compatible with 32bit type libraries.

--- a/OutOfProcDemo/OutOfProcDemo.csproj
+++ b/OutOfProcDemo/OutOfProcDemo.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -62,8 +62,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- Target used to generate TLB for the NetServer library -->
-  <Target Name="GenerateTlb"
-          AfterTargets="Build">
+  <Target Name="GenerateTlb" AfterTargets="Build">
     <Exec Command="&quot;$(SDK40ToolsPath)tlbexp.exe&quot; &quot;$(TargetDir)NetServer.dll&quot; &quot;/out:$(TargetDir)NetServer.tlb&quot;" />
   </Target>
 </Project>
